@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html> <!-- manifest=cloudcmd.appcache -->
+<html manifest=cloudcmd.appcache>
     <head>
         <meta charset="utf-8">
         <!-- mobile first design -->
