@@ -1,10 +1,10 @@
 var fs = require('fs');
-var crypto = require('crypto');
 
 /* varible contain all watched file names
  * {name: true}
  */
-var FileNames           = {};
+var FileNames           = {},
+    NamesList_s         = '';
 
 /* function thet use for crossplatform
  * access to fs.watch or fs.watchFile function
@@ -15,6 +15,30 @@ var firstFileRead_b     = true;
 var Manifest = '';
 
 setWatachFunctions();
+
+
+exports.createManifest = function(){
+    var lAllNames = cloudRequire('hashes.json');
+    if(lAllNames)
+        for(var lName in lAllNames)
+            exports.watch(lName);
+    processManifest();
+};
+
+exports.watch = function(pFileName){
+    console.log(pFileName + ' is watched');
+    
+    if(!FileNames[pFileName]){
+        fs_watch(pFileName, on_fs_watch(pFileName));
+
+        NamesList_s += pFileName + '\n';
+        FileNames[pFileName] = true;
+    }
+    else if(firstFileRead_b){
+        processManifest();
+        firstFileRead_b = false;
+    }
+};
 
 function setWatachFunctions(){
     if(process.platform === 'win32'){
@@ -30,25 +54,6 @@ function setWatachFunctions(){
 
 }
 
-exports.watch = function(pFileName){
-    console.log(pFileName + ' is watched');
-    
-    if(!FileNames[pFileName]){
-        try{
-            fs_watch(pFileName, on_fs_watch(pFileName));
-        }
-        catch(pError){
-            console.log(pError);
-        }
-        Manifest += pFileName + '\n';
-        FileNames[pFileName] = true;
-    }
-    else if(firstFileRead_b){
-        processManifest();
-        firstFileRead_b = false;
-    }
-};
-
 function onWatch (pFileName){
     return function(pEvent, pFileName){
         console.log('file ' + pFileName + 'is changed');
@@ -58,7 +63,7 @@ function onWatch (pFileName){
 function onWatchFile(pFileName){
     return function(pCurr, pPrev){
         console.log(pCurr);
-        if(pCurr.mtime !== pCurr.pPrev.mtime)
+        if(pCurr.mtime !== pPrev.mtime)
             console.log('file ' + pFileName + 'is changed');
     };
 }
@@ -67,7 +72,7 @@ function processManifest(){
     Manifest = 'CACHE MANIFEST\n'   +
         '#' + new Date()   + '\n'   +
         'CACHE:\n'                  +
-        Manifest                    +
+        NamesList_s                 +
         'NETWORK:\n'                +
         '*';
     
@@ -75,4 +80,14 @@ function processManifest(){
         fs.writeFile('cloudcmd.appcache', Manifest, function(){
             console.log('cloudcmd.appcache refreshed');
         });
+}
+
+/* function do safe require of needed module */
+function cloudRequire(pModule){
+  try{
+      return require(pModule);
+  }
+  catch(pError){
+      return false;
+  }
 }
