@@ -40,6 +40,8 @@ running
 
 * Added module is-file-changed.
 
+* Added suport of AppCache.
+
 
 2012.08.24, Version 0.1.6
  
